{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 1806,
  "lineage": "f05f5a65-c04a-f061-ba96-22f4faaa23b3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d93d81bb4899d4cf",
            "arn": "arn:aws:ec2:eu-west-2:367182624298:instance/i-04e0f9f0faef5f3bd",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04e0f9f0faef5f3bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02da1a0a708c71e39",
            "private_dns": "ip-10-0-0-173.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.173",
            "public_dns": "ec2-13-40-57-62.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.40.57.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04f47e20eae4b622d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04c00933ccf2fa7c8",
            "tags": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "tags_all": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c5354ad3df2919d3"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.apache-sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.debian-11",
            "data.aws_availability_zones.available",
            "tls_private_key.key_pair"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d93d81bb4899d4cf",
            "arn": "arn:aws:ec2:eu-west-2:367182624298:instance/i-0afb6b2ff83f80775",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0afb6b2ff83f80775",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-011ed884a75a76863",
            "private_dns": "ip-10-0-1-29.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.29",
            "public_dns": "ec2-3-8-161-193.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.161.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0171884f06298babf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c64a428e7a0db762",
            "tags": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "tags_all": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c5354ad3df2919d3"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.apache-sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.debian-11",
            "data.aws_availability_zones.available",
            "tls_private_key.key_pair"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d93d81bb4899d4cf",
            "arn": "arn:aws:ec2:eu-west-2:367182624298:instance/i-013fd6c4093ed4225",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-013fd6c4093ed4225",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00fcce5f9d1b91e31",
            "private_dns": "ip-10-0-2-223.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.223",
            "public_dns": "ec2-13-40-142-60.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.40.142.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03571924dea2edf8c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d433ff488d6df2bd",
            "tags": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "tags_all": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c5354ad3df2919d3"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.apache-sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.debian-11",
            "data.aws_availability_zones.available",
            "tls_private_key.key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:367182624298:internet-gateway/igw-05123e7ba570d0319",
            "id": "igw-05123e7ba570d0319",
            "owner_id": "367182624298",
            "tags": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "tags_all": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "vpc_id": "vpc-0ceb014ceef5b408c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "apache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:367182624298:loadbalancer/app/web-app-lb/a4158cb47edf99ac",
            "arn_suffix": "app/web-app-lb/a4158cb47edf99ac",
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-app-lb-963138129.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:367182624298:loadbalancer/app/web-app-lb/a4158cb47edf99ac",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f115b6052092270d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04c00933ccf2fa7c8"
              },
              {
                "subnet_id": "subnet-0c64a428e7a0db762"
              },
              {
                "subnet_id": "subnet-0d433ff488d6df2bd"
              }
            ],
            "subnets": [
              "subnet-04c00933ccf2fa7c8",
              "subnet-0c64a428e7a0db762",
              "subnet-0d433ff488d6df2bd"
            ],
            "tags": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "tags_all": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "vpc_id": "vpc-0ceb014ceef5b408c",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "apache_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:367182624298:listener/app/web-app-lb/a4158cb47edf99ac/1320a7a37e8feca7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:367182624298:targetgroup/web-app-lb-tg/b0fca65428f4835b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:367182624298:listener/app/web-app-lb/a4158cb47edf99ac/1320a7a37e8feca7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:367182624298:loadbalancer/app/web-app-lb/a4158cb47edf99ac",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "tags_all": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.apache",
            "aws_lb_target_group.apache_lb_tg",
            "aws_security_group.lb-sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "apache_lb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:367182624298:targetgroup/web-app-lb-tg/b0fca65428f4835b",
            "arn_suffix": "targetgroup/web-app-lb-tg/b0fca65428f4835b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:367182624298:targetgroup/web-app-lb-tg/b0fca65428f4835b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "web-app-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "tags_all": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ceb014ceef5b408c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:367182624298:targetgroup/web-app-lb-tg/b0fca65428f4835b-20230212002620188600000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:367182624298:targetgroup/web-app-lb-tg/b0fca65428f4835b",
            "target_id": "i-04e0f9f0faef5f3bd"
          },
          "dependencies": [
            "aws_instance.web_server",
            "aws_key_pair.key_pair",
            "aws_lb_target_group.apache_lb_tg",
            "aws_security_group.apache-sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.debian-11",
            "data.aws_availability_zones.available",
            "tls_private_key.key_pair"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:367182624298:targetgroup/web-app-lb-tg/b0fca65428f4835b-20230212002619971800000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:367182624298:targetgroup/web-app-lb-tg/b0fca65428f4835b",
            "target_id": "i-0afb6b2ff83f80775"
          },
          "dependencies": [
            "aws_instance.web_server",
            "aws_key_pair.key_pair",
            "aws_lb_target_group.apache_lb_tg",
            "aws_security_group.apache-sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.debian-11",
            "data.aws_availability_zones.available",
            "tls_private_key.key_pair"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:367182624298:targetgroup/web-app-lb-tg/b0fca65428f4835b-20230212002620415700000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:367182624298:targetgroup/web-app-lb-tg/b0fca65428f4835b",
            "target_id": "i-013fd6c4093ed4225"
          },
          "dependencies": [
            "aws_instance.web_server",
            "aws_key_pair.key_pair",
            "aws_lb_target_group.apache_lb_tg",
            "aws_security_group.apache-sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_ami.debian-11",
            "data.aws_availability_zones.available",
            "tls_private_key.key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:367182624298:route-table/rtb-0b1ce989f70508699",
            "id": "rtb-0b1ce989f70508699",
            "owner_id": "367182624298",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05123e7ba570d0319",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "tags_all": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ceb014ceef5b408c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c38ec0ce14fafa5f",
            "route_table_id": "rtb-0b1ce989f70508699",
            "subnet_id": "subnet-04c00933ccf2fa7c8"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0523769634b721196",
            "route_table_id": "rtb-0b1ce989f70508699",
            "subnet_id": "subnet-0c64a428e7a0db762"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0313eeface925ef80",
            "route_table_id": "rtb-0b1ce989f70508699",
            "subnet_id": "subnet-0d433ff488d6df2bd"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apache-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:367182624298:security-group/sg-0c5354ad3df2919d3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5354ad3df2919d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "apache-sg",
            "name_prefix": "",
            "owner_id": "367182624298",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "tags_all": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ceb014ceef5b408c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:367182624298:security-group/sg-0f115b6052092270d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f115b6052092270d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "apache-lb-sh",
            "name_prefix": "",
            "owner_id": "367182624298",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "tags_all": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ceb014ceef5b408c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:367182624298:subnet/subnet-04c00933ccf2fa7c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c00933ccf2fa7c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "367182624298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "tags_all": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "vpc_id": "vpc-0ceb014ceef5b408c"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:367182624298:subnet/subnet-0c64a428e7a0db762",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c64a428e7a0db762",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "367182624298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "tags_all": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "vpc_id": "vpc-0ceb014ceef5b408c"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:367182624298:subnet/subnet-0d433ff488d6df2bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d433ff488d6df2bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "367182624298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "tags_all": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "vpc_id": "vpc-0ceb014ceef5b408c"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:367182624298:vpc/vpc-0ceb014ceef5b408c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ccb829eb5d6f5aec",
            "default_route_table_id": "rtb-06abcfad27670d4dd",
            "default_security_group_id": "sg-097873e1e6e41d9f8",
            "dhcp_options_id": "dopt-089b5ae90ba7cbbb4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ceb014ceef5b408c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06abcfad27670d4dd",
            "owner_id": "367182624298",
            "tags": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            },
            "tags_all": {
              "billing_code": "ACT8675309",
              "company": "Philmatrix",
              "project": "Philmatrix-web-app"
            }
          }
        }
      ]
    }
  ]
}